More alignment issues

--- a/Greenhill_Sarah_project2/css/main.css
+++ b/Greenhill_Sarah_project2/css/main.css
@@ -102,7 +102,7 @@ body {
 	font-size: 15px;
 	font-family: Economica, Georgia, sans-serif;
 	color: #ffffff;
-	text-indent: 10px;
+	text-indent: 3px;
 	border: #ffd938 solid 2px;
 	border-radius: 40px;
 	padding: 5px;
@@ -115,6 +115,7 @@ body {
 	line-height: inherit;
 	background-color: #2d6d9c;
 	width: 1350px;
+	padding-right: 10px;
 	margin: 0 auto;
 }
 
@@ -204,7 +205,7 @@ ol {
 /* Images */
 
 #imgContainer {  
-    padding-left: 40px;                     
+    padding-left: 20px;                    
 	margin: 0 auto;
 	border: none;
 	text-align: center;
